src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-switch/b-switch.scss
.b-switch {
	float: right;
	-moz-transition: background-color 0.4s;
}

.b-switch.color_blue {
	background-color: rgba(140, 220, 245, 0.9);
}

.b-switch.color_darkblue {
	background-color: rgba(0,0, 160, 0.7);
}

.b-switch.color_red {
	background-color: rgba(255, 0, 0, .5);
}

.b-switch.color_gray {
	background-color: rgba(100, 100, 200, 0.6);
}

.b-switch.color_green {
	background-color: rgba(0, 200, 0, .7);
}

.b-switch.color_yellow {
	background-color: rgba(220, 220, 0, 0.5);
}

/****************
 *	options
 */
.b-switch__options {
	float: right;
	background: #fff;
	height: 20px;
}

.b-switch__options li {
	font-size: 11px;
	opacity: 0.4;
	cursor: pointer;
}

.b-switch__options li:hover {
	opacity: 0.8;
}

.b-switch.ui-state-disabled>.b-switch__options>li,
.b-switch.ui-state-disabled>.b-switch__options>li:hover {
	cursor: default;
	opacity: 0.4;
}

.b-switch__options li:first-child {
	float: right;
	overflow: visible;
	margin-right: 5px;
}

.b-switch__options li:nth-child(2) {
	position: absolute;
	right: 43px;
	top: 20px;
	text-align: center;
	overflow: visible;
	padding-right: 7px;
	background: url("/static/i/b-switch__ui.png") right -45px;
}

.b-switch__options li:last-child {
	position: absolute;
	left: 100%;
	margin-left: 5px;
	z-index:200;
}

/****************
 *	ui (slider)
 */
.b-switch__ui {
	float: right;
}
.b-switch_with-hard-to-say .b-switch__ui {
	margin-right: -41px;
}

.b-switch__ui.ui-state-disabled{
	opacity: 1;
}
.b-switch__ui.ui-slider {
	background: transparent;
	display: block;
	height: 20px;
	position: relative;
	border: none;
	border-radius: none;
	padding: 0 !important;
}
.b-switch .ui-slider-background {
	height: 20px;
	background: url("/static/i/b-switch__ui.png") no-repeat -10px 0;	
}

.b-switch_with-hard-to-say .ui-slider-background {
	margin-right: 60px;
}

.b-switch__ui .ui-slider-handle {
	height: 22px;
	width: 22px;
	display: block;
	border: none;
	background: url("/static/i/b-switch__ui.png") no-repeat 0 -20px;
	padding: 0 !important;
	margin: 0 0 0 -11px !important;
	top: -2px !important;
	z-index: 142;
}

.b-switch__ui .ui-slider-handle:focus {
	outline: none;
	background-position: -30px -20px;
}

.b-switch__ui .ui-slider-handle.blinking:focus {
	background-position: 0px -20px;
}

/****************
 *	custom slider sides
 */
.b-switch__ear-left, .b-switch__ear-right {
	float: right;
	display: block;
	height: 20px;
	width: 9px;
	position: relative;
	overflow: visible;
}
.b-switch_with-hard-to-say .b-switch__ui {
	margin-right: -60px;
}
.b-switch__circle-lh, .b-switch__circle-rh {
	float: left;
	background: url("/static/i/b-switch__ui.png") no-repeat 0 0;
	height: 20px;
	width: 9px;
	z-index: 101;
}
.b-switch__circle-rh {
	background-position: -91px 0px;
}

.b-switch__hts {
	background: #fff;
	position: absolute;
	overflow: visible;
	height: 20px;
	width: 18px;
	z-index: 100;
	top: 0;
	left: 51px;
}
.b-switch.ui-state-disabled .b-switch__hts{
	margin-top: -1px;
	border-top: 1px solid #fff;
}

.b-switch__hts-text {
	font-size: 11px;
	opacity: 0.4;
	cursor: pointer;
	position: absolute;
	left: 100%;
	top: 0px;
	text-align: left;
	overflow: visible;
	padding-left:5px;
	padding-right: 10px;
	white-space: nowrap;
	cursor: pointer;
}

.b-switch__hts-text:hover {
	opacity: 0.8;
}

.b-switch.ui-state-disabled .b-switch__hts-text,
.b-switch.ui-state-disabled .b-switch__hts-text:hover {
	opacity: 0.4;
	cursor: default;
}

.b-switch__hts:hover .b-switch__hts-text, .b-switch__hts-text_visible{
	display:block;
}
.b-switch__hts-gap {
	position: absolute;
	top: 0;
	left: 9px;
	height: 20px;
	width: 42px;
	background: #fff;
	z-index: 100;
}

